# cuda_vtk

./: CMakeLists.txt  main.cpp
BurnModelSolver/: BurnModelSolver.cpp  BurnModelSolver.cu  BurnModelSolver.hpp  CMakeLists.txt  Params.cpp  Params.cu  Params.hpp  solve.cu
BurnModelSolver/Solver/: CMakeLists.txt  Solver.cpp  Solver.cu  Solver.hpp  cuda_utils.cuh
